--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-what
+The project known as "ED" - 2024
+Is hosted by AzrielDan and can be contacted by encyclopediadramatica.object777@passinbox.com
